# Warcaby

./: Board.cpp  Board.h  CMakeLists.txt  Figure.cpp  Figure.h  Game.cpp  Game.h  Logic.cpp  Logic.h  NormalFigure.cpp  NormalFigure.h  QueenFigure.cpp  QueenFigure.h  Square.cpp  Square.h  main.cpp
